                     CHANGES version 5.28.0

           This file summarizes changes made since 5.0

Version 5.28.0

Fixed: Issue #916: Linux: If monit 5.27.0 runs as non-root user, the promatch fails to find processes that belong to
other users and some statistics, such as memory usage, can show 0. Thanks to Lutz Mader for fix.

Fixed: Linux: If monit 5.27.0 runs as non-root user, it required the CAP_SYS_RESOURCE capability to be able to monitor
filedescriptors usage of other processes. Thanks to Christian Goettsche for report.

Fixed: Issue #920: AIX, NetBSD, Solaris: Monit 5.27.0 logs "Cannot test filesdescriptors usage as the statistics is not available on this system"
every cycle even if no filedescriptors test was set in monit configuration.

Fixed: Issue #926: Linux: The process-match based check had extra trailing space.

Fixed: Issue #928: Fixed race condition in HTTP interface reload on fast consecutive SIGHUP. Thanks to Andy Spitzer for patch.

Fixed: Improve the cross-compilation support. Thanks to Christian Goettsche and Helmut Grohne for patch.

New: Changed log file timestamp format to ISO 8601


Version 5.27.0

Important: (Backward compatibility impact) The SSL "version: auto" now defaults to TLSv1.2 and TLSv1.3 only.
If you need to enable TLSv1.0 or TLSv1.1 (regardless of how insecure it is), you have to explicitly enable it
via the SSL option, example:
     set ssl {
        version: tlsv11
     }

New: Added support for MySQL TLS encryption. Example:
        if failed port 3306 protocol mysqls then alert

New: Issue #839: Added support for MySQL 8.x caching_sha2_password authentication. When unsecured (non-TLS) connection
is used, it is possible to also verify the server's RSA key checksum to protect against man-in-the-middle attacks. Example:
    check host mymachine with address 127.0.0.1
        if failed
            port 3306
            protocol mysql
            username monit
            password mypassword123